[v0.3.1] 修复一些小的规范问题